--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,9 @@
 <head>
     Hello
 </head>
+<style>
+    .p{background-color: blue};
+</style>
 <body>
     <h1>new files</h1>
     <h2>this was edited in git hub</h2>
